--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ org.gradle.jvmargs=-Xmx1G
 	modmenu_version=3.1.0
 
 # Mod Properties
-	mod_version = 1.3.2-1.18.2
+	mod_version = 1.3.2-1.18.2b
 	maven_group = fr.alice
 	archives_base_name = featurs-mod
 
