--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ org.gradle.jvmargs=-Xmx1G
 	modmenu_version=4.0.0
 
 # Mod Properties
-	mod_version = 1.3.3-1.19
+	mod_version = 1.3.3-1.19b
 	maven_group = fr.alice
 	archives_base_name = featurs-mod
 
